--- a/benchmarks/benchmark.html
+++ b/benchmarks/benchmark.html
@@ -16,6 +16,8 @@
     
     <!-- Test Suites-->
     <script src="suites/testSelectors_1.js"></script>
+    <script src="suites/testSelectors_2.js"></script>
+    <script src="suites/testSelectors_3.js"></script>
     
     <script>
       $(document).ready(function(){
