Added new feature save to the editor

--- a/benchmarks/benchmark.html
+++ b/benchmarks/benchmark.html
@@ -18,6 +18,7 @@
     <script src="suites/testSelectors_1.js"></script>
     <script src="suites/testSelectors_2.js"></script>
     <script src="suites/testSelectors_3.js"></script>
+    <script src="suites/testCheckedAttribute.js"></script>
     
     <script>
       $(document).ready(function(){
