--- a/editor/puma-editor.html
+++ b/editor/puma-editor.html
@@ -51,6 +51,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active" id="translatePuma"><a href="#">Execute</a></li>
+         <li class="active" id="loadPuma"><a href="#">Load</a></li>
       </ul>
 	  </div> 
   </div>
