Added benchmark for loop

--- a/benchmarks/benchmark.html
+++ b/benchmarks/benchmark.html
@@ -20,6 +20,7 @@
     <script src="suites/testSelectors_3.js"></script>
     <script src="suites/testCheckedAttribute.js"></script>
 	  <script src="suites/testParseNumber.js"></script>
+    <script src="suites/testLoopFor.js"></script>
     
     <script>
       $(document).ready(function(){
