--- a/editor/puma-editor.html
+++ b/editor/puma-editor.html
@@ -15,6 +15,7 @@
   <script src="libs/codemirror/addon/hint/show-hint.js"></script>
   <script src="libs/codemirror/addon/hint/xml-hint.js"></script>
   <script src="libs/codemirror/addon/hint/html-hint.js"></script>
+  <script src="libs/codemirror/addon/hint/javascript-hint.js"></script>
   
   <script src="libs/codemirror/mode/xml/xml.js"></script>
   <script src="libs/codemirror/mode/javascript/javascript.js"></script>
