--- a/editor/puma-editor.html
+++ b/editor/puma-editor.html
@@ -52,7 +52,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active" id="translatePuma"><a href="#">Execute</a></li>
-         <li class="active" id="loadPuma"><a href="#">Load</a></li>
+        <li class="active" id="loadPuma"><a href="#">Load</a></li>
+        <li class="active" id="loadBackupPuma"><a href="#">Upps! :)</a></li>
       </ul>
 	  </div> 
   </div>
