--- a/Security/DOM Injection/Funcion HTML seguro/index.html
+++ b/Security/DOM Injection/Funcion HTML seguro/index.html
@@ -10,6 +10,38 @@
                 <h1>Funcion que crea HTML seguro de un string</h1>
                 <h2>Se debe evitar el uso de innerHtml</h2>
             </div>
+            <div id="listaNegra" class="cajaDiv">
+                <h3 id="centrado">Blacklist</h3>
+                <table class="tabla">
+                    <tbody>
+                        <tr>
+                            <td>
+                              <label for="BLTags">Ingrese Tag a Prohibir</label>
+                              <input type="text" id="BLTags" class="areaDeTexto"></input>  
+                              <input type="button" id="button1" class="botonMediano" value="Agregar" 
+                              onclick="agregarBlackList1()">
+				              </input>
+                            </td>
+                            <td>
+                                <label for="BLAtributos">Ingrese atributo a Prohibir</label>
+                               <input type="text" id="BLAtributos" class="areaDeTexto"></input> 
+                                <input type="button" id="button2" class="botonMediano" value="Agregar" 
+                                onclick="agregarBlackList2()">
+				                </input>
+                            </td>
+                            <td>
+                                <label for="BLTagAtributos">Ingrese Tag - atributos a Prohibir</label>
+                                <br/>
+                                <input type="text" id="BLTagAtributos1" class="areaDeTexto"></input>
+                                <input type="text" id="BLTagAtributos2" class="areaDeTexto"></input>
+                                <input type="button" id="button3" class="botonMediano" value="Agregar" 
+                                onclick="agregarBlackList3()">
+				                </input>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
             <div id="contenido1" class="cajaDiv">
                 <div class="DivOculto">
                 <label for="stringHtml">Ingrese codigo HTML que sera insertado en el div de abajo</label>
