fixes on style of documents and test cases

--- a/Security/dom-injection/test-cases/test3/test3.out.html
+++ b/Security/dom-injection/test-cases/test3/test3.out.html
@@ -1,14 +1,14 @@
 <html>
     <Head>
-        <title>Test 1 OUT</title>
+        <title>Test 3 OUT</title>
         <link rel="StyleSheet" href="../test.css" type="text/css">
-		<script type="text/javascript" src="../htmlSeguroByChelo.js"></script>
-		<script type="text/javascript" src="test1.out.js"></script>
+		<script type="text/javascript" src="../safehtml-bychelo.js"></script>
+		<script type="text/javascript" src="test3.out.js"></script>
     </Head>
     <body>
         <div id="contenedor">
             <div id="cabecera" class="cajaDiv">
-                <h1>Test 1 OUT</h1>
+                <h1>Test 3 OUT</h1>
             </div>
             <div id="contenido1" class="cajaDiv">
                 <div class="DivOculto">
