--- a/Security/dom-injection/test-cases/test4/test4.out.html
+++ b/Security/dom-injection/test-cases/test4/test4.out.html
@@ -1,18 +1,18 @@
 <html>
     <Head>
-        <title>Test 5 OUT</title>
+        <title>Test 4 OUT</title>
         <link rel="StyleSheet" href="../test.css" type="text/css">
-		<script type="text/javascript" src="../htmlSeguroByChelo.js"></script>
-		<script type="text/javascript" src="test5.out.js"></script>
+		<script type="text/javascript" src="../safehtml-bychelo.js"></script>
+		<script type="text/javascript" src="test4.out.js"></script>
     </Head>
     <body>
         <div id="contenedor">
             <div id="cabecera" class="cajaDiv">
-                <h1>Test 5 OUT</h1>
+                <h1>Test 4 OUT</h1>
             </div>
             <div id="contenido1" class="cajaDiv">
                 <div class="DivOculto">
-                <label for="stringHtml">Ingrese codigo HTML que sera insertado aqui mismo</label>
+                <label for="stringHtml">Ingrese codigo HTML que sera insertado en el div de abajo</label>
                 </div>
                 <br/>
                 <div>
@@ -22,6 +22,9 @@
                 <input type="button" id="usarInner" class="botonMediano" value="Agregar" 
                        onclick="agregar()">
 				</input>
+            </div>
+            <div id="divVacio" class="cajaDiv">
+                
             </div>
             <div id="pie" class="cajaDiv">
                 <h2>byChelo</h2>
