--- a/Security/dom-injection/test-cases/test5/test5.out.html
+++ b/Security/dom-injection/test-cases/test5/test5.out.html
@@ -1,21 +1,25 @@
 <html>
     <Head>
-        <title>Test 2 OUT</title>
+        <title>Test 5 OUT</title>
         <link rel="StyleSheet" href="../test.css" type="text/css">
-		<script type="text/javascript" src="../htmlSeguroByChelo.js"></script>
-		<script type="text/javascript" src="test2.out.js"></script>
+		<script type="text/javascript" src="../safehtml-bychelo.js"></script>
+		<script type="text/javascript" src="test5.out.js"></script>
     </Head>
     <body>
         <div id="contenedor">
             <div id="cabecera" class="cajaDiv">
-                <h1>Test 2 OUT</h1>
+                <h1>Test 5 OUT</h1>
             </div>
             <div id="contenido1" class="cajaDiv">
                 <div class="DivOculto">
-                <h3>Toque el boton para mostrar por consola el contendido html de este DIV</h3>
+                <label for="stringHtml">Ingrese codigo HTML que sera insertado aqui mismo</label>
                 </div>
                 <br/>
-                <input type="button" id="usarInner" class="botonMediano" value="Salida por consola" 
+                <div>
+                <input type="text" id="stringHtml" class="cajaDeTexto"/>
+                </div>
+                <br/>
+                <input type="button" id="usarInner" class="botonMediano" value="Agregar" 
                        onclick="agregar()">
 				</input>
             </div>
