Fixed minor issues in editor

--- a/editor/puma-editor.html
+++ b/editor/puma-editor.html
@@ -27,6 +27,7 @@
   <script src="../src/runtime.js"></script>
   <script src="../src/runtime.meta.js"></script>
   <script src="../esprima-master/esprima.js" ></script>  
+  <script src="../escodegen-master/escodegen.browser.js" ></script>
   
   <style type="text/css">
     .CodeMirror {border-top: 1px solid #888; border-bottom: 1px solid #888;}
