changes to editor, fixed some benchmarks

--- a/benchmarks/benchmark.html
+++ b/benchmarks/benchmark.html
@@ -22,6 +22,7 @@
     <script src="suites/testCheckedAttribute.js"></script>
 	  <script src="suites/testParseNumber.js"></script>
     <script src="suites/testLoopFor.js"></script>
+    <script src="suites/testQuerySelector_id.js"></script>
     <script src="suites/testQuerySelectorAll_id.js"></script>
     <script src="suites/testQuerySelectorAll_tagName.js"></script>
     <script src="suites/testQuerySelectorAll_className.js"></script>     
