--- a/editor/puma-editor.html
+++ b/editor/puma-editor.html
@@ -17,6 +17,11 @@
   <script src="libs/codemirror/addon/hint/html-hint.js"></script>
   <script src="libs/codemirror/addon/hint/javascript-hint.js"></script>
   
+  <link rel="stylesheet" href="libs/codemirror/addon/fold/foldgutter.css">
+  <script src="libs/codemirror/addon/fold/foldcode.js"></script>
+  <script src="libs/codemirror/addon/fold/foldgutter.js"></script>
+  <script src="libs/codemirror/addon/fold/brace-fold.js"></script>
+  
   <script src="libs/codemirror/mode/xml/xml.js"></script>
   <script src="libs/codemirror/mode/javascript/javascript.js"></script>
   <script src="libs/codemirror/mode/css/css.js"></script>
@@ -30,7 +35,14 @@
   <script src="../escodegen-master/escodegen.browser.js" ></script>
   
   <style type="text/css">
-    .CodeMirror {border-top: 1px solid #888; border-bottom: 1px solid #888;}
+    .CodeMirror {
+      border-top: 1px solid #888; 
+      border-bottom: 1px solid #888;
+      height: auto;
+    }
+    div {
+      /*height: 100%;*/
+    }
   </style>
 </head>
 
