Modified folder libs structure

--- a/editor/puma-editor.html
+++ b/editor/puma-editor.html
@@ -30,7 +30,7 @@
   
   <!-- Include required JS -->
   <script src="editor.js"></script>
-  <script data-main="../src/pumascript.js" src="../libs/requirejs/require.js"></script>
+  <script data-main="../src/pumascript.js" src="../src/libs/requirejs/require.js"></script>
   
   <style type="text/css">
     .CodeMirror {
