--- a/test/test.html
+++ b/test/test.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <title>PumaScript Test Suite</title>
   <link rel="stylesheet" href="qunit/qunit.css">
-  <script data-main="../src/pumascript.js" src="../libs/requirejs/require.js"></script>
-
+  <script data-main="../src/pumascript.js" src="../src/libs/requirejs/require.js"></script>
 </head>
+
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
