--- a/editor/puma-editor.html
+++ b/editor/puma-editor.html
@@ -4,37 +4,35 @@
   <title>PumaScript</title>
   <meta charset="utf-8"/>
 
-  <!-- BootStap  and Jquery-->
-  <script src="libs/jquery/jquery-1.9.1.min.js"></script>
   <link rel="stylesheet" href="libs/bootstrap/css/bootstrap.css">
-  <script src="libs/bootstrap/js/bootstrap.min.js"></script>
-  
+
   <link rel="stylesheet" href="libs/codemirror/lib/codemirror.css">
   <link rel="stylesheet" href="libs/codemirror/addon/hint/show-hint.css">
+  <link rel="stylesheet" href="libs/codemirror/addon/fold/foldgutter.css">
+
+  <!-- codemirror -->
   <script src="libs/codemirror/lib/codemirror.js"></script>
-  
+
   <script src="libs/codemirror/addon/hint/show-hint.js"></script>
   <script src="libs/codemirror/addon/hint/xml-hint.js"></script>
   <script src="libs/codemirror/addon/hint/html-hint.js"></script>
   <script src="libs/codemirror/addon/hint/javascript-hint.js"></script>
-  
-  <link rel="stylesheet" href="libs/codemirror/addon/fold/foldgutter.css">
+
   <script src="libs/codemirror/addon/fold/foldcode.js"></script>
   <script src="libs/codemirror/addon/fold/foldgutter.js"></script>
   <script src="libs/codemirror/addon/fold/brace-fold.js"></script>
-  
+
   <script src="libs/codemirror/mode/xml/xml.js"></script>
   <script src="libs/codemirror/mode/javascript/javascript.js"></script>
   <script src="libs/codemirror/mode/css/css.js"></script>
   <script src="libs/codemirror/mode/htmlmixed/htmlmixed.js"></script>
-  
+
   <!-- Include required JS -->
-  <script src="editor.js"></script>
-  <script data-main="../src/pumascript.js" src="../src/libs/requirejs/require.js"></script>
-  
+  <script data-main="editor.js" src="../src/libs/requirejs/require.js"></script>
+
   <style type="text/css">
     .CodeMirror {
-      border-top: 1px solid #888; 
+      border-top: 1px solid #888;
       border-bottom: 1px solid #888;
       height: auto;
     }
@@ -45,7 +43,7 @@
 </head>
 
 <body>
-  
+
 <!-- Options Bar -->
 <nav style="margin-bottom: 0px;" class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
@@ -65,7 +63,7 @@
         <li class="active" id="loadPuma"><a href="#">Load</a></li>
         <li class="active" id="loadBackupPuma"><a href="#">Upps! :)</a></li>
       </ul>
-	  </div> 
+	  </div>
   </div>
 </nav>
 
@@ -73,17 +71,10 @@
   <div  class="col-md-6">
     <h2>PumaScript</h2>
     <div id="puma"></div>
-  </div>	
+  </div>
   <div class="col-md-6">
-	   <h2>Javascript</h2>
-     <div id="javascript"> </div> 
+     <h2>Javascript</h2>
+     <div id="javascript"> </div>
   </div>
 </div>
-    
-<script type="text/javascript">
-  window.onload = function() {
-      new PumaEditor();
-  };
-</script>
-  
 </body>
