Restoring PropertyWrapper properties and adding thirdparty folders in test.

--- a/test/test.html
+++ b/test/test.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>PumaScript Test Suite</title>
-  <link rel="stylesheet" href="qunit/qunit.css">
+  <link rel="stylesheet" href="thirdparty/qunit/qunit.css">
   <script data-main="../src/pumascript.js" src="../thirdparty/requirejs/require.js"></script>
 </head>
 
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <script src="qunit/qunit.js"></script>
+  <script src="thirdparty/qunit/qunit.js"></script>
   <script src="test.js"></script>
 </body>
 </html>
