--- a/test/test.html
+++ b/test/test.html
@@ -4,13 +4,17 @@
   <meta charset="utf-8">
   <title>PumaScript Test Suite</title>
   <link rel="stylesheet" href="thirdparty/qunit/qunit.css">
-  <script data-main="../src/pumascript.js" src="../thirdparty/requirejs/require.js"></script>
+  <script src="thirdparty/qunit/qunit.js"></script>
+  <script>
+      // required for requirejs context
+      QUnit.config.autostart = false;
+  </script>
+
+  <script data-main="suite.js" src="../thirdparty/requirejs/require.js"></script>
 </head>
 
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <script src="thirdparty/qunit/qunit.js"></script>
-  <script src="test.js"></script>
 </body>
 </html>
