Updating files to include license header

--- a/tracks/security/dom-injection/test2/test2.html
+++ b/tracks/security/dom-injection/test2/test2.html
@@ -1,3 +1,4 @@
+<!-- Copyright (c) 2013 - present UTN-LIS -->
 <html>
     <Head>
         <title>Test 2</title>
@@ -14,7 +15,7 @@
                 <h3>Toque el boton para mostrar por consola el contendido html de este DIV</h3>
                 </div>
                 <br/>
-                <input type="button" id="usarInner" class="botonMediano" value="Salida por consola" 
+                <input type="button" id="usarInner" class="botonMediano" value="Salida por consola"
                        onclick="agregar()">
 				</input>
             </div>
