--- a/tracks/security/dom-injection/test2/test2.out.html
+++ b/tracks/security/dom-injection/test2/test2.out.html
@@ -1,3 +1,5 @@
+<!-- Copyright (c) 2013 - present UTN-LIS -->
+
 <html>
     <Head>
         <title>Test 2 OUT</title>
@@ -15,7 +17,7 @@
                 <h3>Toque el boton para mostrar por consola el contendido html de este DIV</h3>
                 </div>
                 <br/>
-                <input type="button" id="usarInner" class="botonMediano" value="Salida por consola" 
+                <input type="button" id="usarInner" class="botonMediano" value="Salida por consola"
                        onclick="agregar()">
 				</input>
             </div>
