--- a/tracks/security/dom-injection/test4/test4.out.html
+++ b/tracks/security/dom-injection/test4/test4.out.html
@@ -1,3 +1,4 @@
+<!-- Copyright (c) 2013 - present UTN-LIS -->
 <html>
     <Head>
         <title>Test 4 OUT</title>
@@ -19,12 +20,12 @@
                 <input type="text" id="stringHtml" class="cajaDeTexto"/>
                 </div>
                 <br/>
-                <input type="button" id="usarInner" class="botonMediano" value="Agregar" 
+                <input type="button" id="usarInner" class="botonMediano" value="Agregar"
                        onclick="agregar()">
 				</input>
             </div>
             <div id="divVacio" class="cajaDiv">
-                
+
             </div>
             <div id="pie" class="cajaDiv">
                 <h2>byChelo</h2>
