--- a/editor/puma-editor.html
+++ b/editor/puma-editor.html
@@ -1,5 +1,5 @@
+<!-- Copyright (c) 2013 - present UTN-LIS -->
 <!doctype html>
-
 <head>
     <title>PumaScript</title>
     <meta charset="utf-8" />
