--- a/tracks/security/dom-injection/test5/test5.out.html
+++ b/tracks/security/dom-injection/test5/test5.out.html
@@ -1,3 +1,4 @@
+<!-- Copyright (c) 2013 - present UTN-LIS -->
 <html>
     <Head>
         <title>Test 5 OUT</title>
@@ -19,7 +20,7 @@
                 <input type="text" id="stringHtml" class="cajaDeTexto"/>
                 </div>
                 <br/>
-                <input type="button" id="usarInner" class="botonMediano" value="Agregar" 
+                <input type="button" id="usarInner" class="botonMediano" value="Agregar"
                        onclick="agregar()">
 				</input>
             </div>
