--- a/deps-injector/index.html
+++ b/deps-injector/index.html
@@ -1,9 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
     <head>
+    	<meta charset="utf-8">
         <title>PumaScript UTN-FRC</title>
         <script data-main="deps-injector.js" src="../thirdparty/requirejs/require.js"></script>
     </head>
     <body>
         <p>PumaScript Dependency injector POC</p>
     </body>
+
 </html>
