--- a/test/test.html
+++ b/test/test.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../node_modules/qunitjs/qunit/qunit.css">
   <script src="../node_modules/qunitjs/qunit/qunit.js"></script>
   <script>
-      // required for requirejs context
+      // Required for requirejs context
       QUnit.config.autostart = false;
   </script>
 
